# solvers

./: .gitignore  CMakeLists.txt  README.md  ea_solver_temp.cpp  temp.cpp
docs/: doxygen-config
samples/: CMakeLists.txt  analysis_example.cpp  analyze.cpp  data_generation.cpp  ea_solver.cpp  find_lr.cpp  gd_solver.cpp  generate_test_data.cpp  gn_solver.cpp  greedy_nn_solver.cpp  ls_solver.cpp  penalized_gd_solver.cpp  ransac.cpp  ransac_solver.cpp  run_samples.sh  utils.cpp
samples/utils/: data_generator.cpp  plotting.cpp
scripts/: generate_docs.sh  install_libraries.sh  make_build.sh
src/: CMakeLists.txt  common.cpp  common.h  ea_solver.cpp  ea_solver.h  gd_fit.cpp  gd_fit.h  gd_linear_solver.cpp  gd_linear_solver.h  gd_solver.cpp  gd_solver.h  ls.cpp  ls.h  ls_solver.cpp  ls_solver.h  nnls.cpp  nnls.h  nnls_solver.cpp  nnls_solver.h  solver.cpp  solver.h
src/analytical/linear/: ls_solver.cpp  ls_solver.h
src/evolutionary_algorithm/: ea_solver.cpp  ea_solver.h  robust_ea_solver.cpp  robust_ea_solver.h
src/gauss-newton/: gn_solver.cpp  gn_solver.h
src/gradient_descent/: gd_linear_solver.cpp  gd_linear_solver.h  gd_solver.cpp  gd_solver.h  lr_finder.cpp  lr_finder.h
src/linear/: ls_solver.cpp  ls_solver.h  nnls_solver.cpp  nnls_solver.h
src/logging/: logging-config.conf
src/non-negative/: greedy_nn_solver.cpp  greedy_nn_solver.h  linear_nnls_solver.cpp  linear_nnls_solver.h  nn_solver.cpp  nn_solver.h  nngn_solver.cpp  nngn_solver.h  nnls_solver.cpp  nnls_solver.h
src/numerical/: numerical_solver.cpp  numerical_solver.h
src/numerical/evolutionary_algorithm/: ea_solver.cpp  ea_solver.h  robust_ea_solver.cpp  robust_ea_solver.h
src/numerical/gauss-newton/: gn_solver.cpp  gn_solver.h
src/numerical/gradient_descent/: gd_linear_solver.cpp  gd_linear_solver.h  gd_solver.cpp  gd_solver.h  penalized_gd_solver.cpp  penalized_gd_solver.h
src/robust/: ransac_solver.cpp  ransac_solver.h
tests/: CMakeLists.txt  common_test.cpp  ea_solver_test.cpp  gd_fit_test.cpp  gd_linear_solver_test.cpp  gd_solver_test.cpp  gn_solver_test.cpp  linear_nnls_solver_test.cpp  ls_fit_test.cpp  ls_solver_test.cpp  nnls_fit_test.cpp  nnls_solver_test.cpp  ransac_solver_test.cpp  robust_ea_solver_test.cpp  set_initial_solution_test.cpp  svd_inverse_test.cpp  test_utils.cpp
