add_executable(ls_fit_test.exe ls_fit_test.cpp)
add_executable(nnls_fit_test.exe nnls_fit_test.cpp)
add_executable(common_test.exe common_test.cpp)
add_executable(gd_fit_test.exe gd_fit_test.cpp)

include(CTest)
add_test(ls_fit_test.exe ls_fit_test.exe)
add_test(nnls_fit_test.exe nnls_fit_test.exe)
add_test(common_test.exe common_test.exe)
add_test(gd_fit_test.exe gd_fit_test.exe)