add_executable(ls_solver_test.exe ls_solver_test.cpp)
add_executable(nnls_solver_test.exe nnls_solver_test.cpp)
add_executable(common_test.exe common_test.cpp)
add_executable(gd_linear_solver_test.exe gd_linear_solver_test.cpp)
add_executable(ea_solver_test.exe ea_solver_test.cpp)

include(CTest)
add_test(ls_solver_test.exe ls_solver_test.exe)
add_test(nnls_solver_test.exe nnls_solver_test.exe)
add_test(common_test.exe common_test.exe)
add_test(gd_linear_solver_test.exe gd_linear_solver_test.exe)
add_test(ea_solver_test.exe ea_solver_test.exe)